# frankos

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  release.sh
api/: hxcmod.h  m-os-api.h
api/mos2/system/: ver.h
apps/api/: frankos-app.h
apps/compiled/: basic  digger  digger.inf  frankamp  minesweeper  notepad  solitaire  zxspectrum
apps/source/basic/: CMakeLists.txt  Commands.c  External.c  FileIO.c  MMBasic.c  MMBasic.h  MM_Misc.c  Memory.c  Memory.h  PicoMite.c  frankos_alloc.c  frankos_app.ld  frankos_ff.c  frankos_libc.c  frankos_main.c  frankos_platform.c  frankos_platform.c.bak  frankos_stubs.c
apps/source/basic/frankos/: diskio.h  ff.h  frankos_pico_overrides.h
apps/source/basic/frankos/class/cdc/: cdc_device.h
apps/source/calculator/: main.c
apps/source/dendy/: main.c
apps/source/digger/: CMakeLists.txt  def.h  digger.c  digger_icon.raw  frankos_app.h  frankos_kbd.c  frankos_libc.c  frankos_main.c  frankos_math.c  frankos_snd.c  frankos_timer.c  frankos_vid.c  gen_inf.py  input.c  main.c  record.c  scores.c  spinlock.c  sprite.c
apps/source/frankamp/: CMakeLists.txt  main.c
apps/source/kickstart/: main.c
apps/source/manul/: CMakeLists.txt  html.c  html.h  http.c  http.h  main.c  manul.h  render.c  render.h  url.c  url.h
apps/source/minesweeper/: CMakeLists.txt  main.c
apps/source/nettools/: CMakeLists.txt  main.c
apps/source/notepad/: CMakeLists.txt  main.c
apps/source/paintbrush/: CMakeLists.txt  main.c  pb.h  pb_bmp.c  pb_canvas.c  pb_icons.c  pb_ui.c
apps/source/pshell/: CMakeLists.txt  main.c  pshell_compat.h  pshell_sram.h  pshell_vt100.c  shell.c
apps/source/pshell/cc/: cc.c  cc_malloc.c
apps/source/solitaire/: CMakeLists.txt  gen_inf.py  main.c
apps/source/videoplayer/: main.c  pl_mpeg.h  psx_str.h
apps/source/zxspectrum/: CMakeLists.txt  main.c
boards/: adafruit_fruit_jam.h  frank_m2.h  fruit_jam.h
docs/: api-reference.md  app-development.md  architecture.md  building.md
drivers/audio/: CMakeLists.txt  tlv320dac3100.c  tlv320dac3100.h
drivers/fatfs/: ffconf.h
drivers/ps2/: ps2.c  ps2.h
drivers/psram/: psram.c  psram.h  psram_init.c  psram_init.h
drivers/sdcard/: sdcard.c  sdcard.cmake  sdcard.h
drivers/usb_hid/: CMakeLists.txt  tusb_config.h  usb_hid.c  usb_hid.h
drivers/usbhid/: CMakeLists.txt  hid_app.c  tusb_config.h  usbhid.h
drivers/wifi/: wifi_esp32.c  wifi_esp32.h
lib/helix/: CMakeLists.txt
lib/helix/pub/: mp3dec.h
lib/helix/real/: assembly.h  buffers.c
lib/hxcmod/: CMakeLists.txt
lib/opl/: CMakeLists.txt  emu8950.c  midi_opl.c  midifile.c
sdcard/fos/: basic  basic.inf  calculator  dendy  digger  frankamp  frankamp.inf  kickstart  manul  manul.inf  minesweeper  nettools  nettools.inf  notepad  paintbrush  paintbrush.inf  pshell  solitaire  video  video.inf  zxspectrum
src/: FreeRTOSConfig.h  alttab.c  alttab.h  app.c  audio.c  audio.h  board_config.h  clipboard.c  clipboard.h  cmd.h  config.h  control_panel.c  controls.c  controls.h  cp_icons.c  cursor.c  cursor.h  default_icon.c  desktop.c  desktop.h  desktop_icon.c  dialog.c  dialog.h  dialog_icons.c  display.c  display.h  file_dialog.c  file_dialog.h  filemanager.c  filemanager.h  find_dialog.c  find_dialog.h  fn_icons.c  font.h  font8x16.c  font8x8.c  font_ui.c  font_ui_bold.c  freertos_ext.c  fw_boot_redirect.c  (+50 more)
src/musl/: __malloc.c  __vfprintf.c
src/posix.1/: exec.c
tools/: convert_ico_16.py  regen_inf.py
